# Analisis-de-estres

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
configs/: config.yaml
notebooks/: entrenamiento.ipynb
src/analisis_estres/: config.py
src/analisis_estres.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/analisis_estres/data/: make_dataset.py
src/analisis_estres/features/: build_features.py
src/analisis_estres/models/: train.py
src/analisis_estres/visualization/: plots.py
